--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <section class="navbar-section">
       <nav class="navbar">
         <!-- NAV CONTENT -->
+        <h1 class="main-head">
+          William <br />
+          Hellems-Moody
+        </h1>
         <div class="navbar-container">
           <div class="navbar-toggle">
             <i class="fa-solid fa-bars toggle"></i>
