--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
     <section class="navbar-section">
       <nav class="navbar">
         <!-- NAV CONTENT -->
-        <h1 class="main-head">
-          William <br />
-          Hellems-Moody
-        </h1>
+        <a href="https://williamhmoody.com">
+          <h1 class="main-head">
+            William <br />
+            Hellems-Moody
+          </h1>
+        </a>
         <div class="navbar-container">
           <div class="navbar-toggle">
             <i class="fa-solid fa-bars toggle"></i>
