--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <!-- Insert DarkMode Feature -->
     <h1 class="gpa-main-head">College GPA Calculator</h1>
     <a class="additional-link" href="https://williamhmoody.com"
-      >Looking For More Tools...</a
+      >Need More Tools...</a
     >
     <div class="gpa-calculator-section">
       <section class="gpa-calculator-section">
